<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SharedIsaWidget</class>
 <widget class="QWidget" name="SharedIsaWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1054</width>
    <height>445</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
   <property name="spacing">
    <number>6</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item>
    <layout class="QHBoxLayout" name="controls_layout_" stretch="0,2,1,1,0,0">
     <property name="spacing">
      <number>9</number>
     </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
     <property name="topMargin">
      <number>0</number>
     </property>
     <property name="rightMargin">
      <number>0</number>
     </property>
     <property name="bottomMargin">
      <number>0</number>
     </property>
     <item alignment="Qt::AlignTop">
      <widget class="QWidget" name="viewing_options_widget_" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="viewing_options_widget_layout_">
        <property name="spacing">
         <number>6</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>0</number>
        </property>
        <property name="bottomMargin">
         <number>0</number>
        </property>
        <item alignment="Qt::AlignTop">
         <widget class="ArrowIconComboBox" name="viewing_options_combo_">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="text">
           <string>Viewing Options</string>
          </property>
          <property name="icon">
           <iconset>
            <normaloff>:/Resources/assets/PullDownOff_Gray.svg</normaloff>:/Resources/assets/PullDownOff_Gray.svg</iconset>
          </property>
          <property name="flat">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QWidget" name="viewing_options_checkboxes_widget_" native="true">
          <layout class="QGridLayout" name="viewing_options_checkboxes_layout_">
           <property name="leftMargin">
            <number>0</number>
           </property>
           <property name="topMargin">
            <number>0</number>
           </property>
           <property name="rightMargin">
            <number>0</number>
           </property>
           <property name="bottomMargin">
            <number>0</number>
           </property>
           <item row="1" column="1">
            <widget class="ScaledCheckBox" name="opcode_">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>Opcode</string>
             </property>
             <property name="checked">
              <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="ScaledCheckBox" name="operands_">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>Operands</string>
             </property>
             <property name="checked">
              <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
            <widget class="ScaledCheckBox" name="binary_representation_">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>Binary representation</string>
             </property>
             <property name="checked">
              <bool>false</bool>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <widget class="ScaledCheckBox" name="pc_address_">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="text">
              <string>PC address</string>
             </property>
             <property name="checked">
              <bool>false</bool>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item alignment="Qt::AlignTop">
      <widget class="ScaledLineEdit" name="go_to_line_">
       <property name="placeholderText">
        <string>Go to line...</string>
       </property>
      </widget>
     </item>
     <item alignment="Qt::AlignTop">
      <widget class="TextSearchWidget" name="search_">
       <property name="minimumSize">
        <size>
         <width>0</width>
         <height>0</height>
        </size>
       </property>
      </widget>
     </item>
     <item alignment="Qt::AlignTop">
      <widget class="ScaledLabel" name="search_results_">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="text">
        <string>No results</string>
       </property>
      </widget>
     </item>
     <item alignment="Qt::AlignTop">
      <widget class="SharedIsaBranchLabelNavigationWidget" name="branch_label_navigation_" native="true">
       <property name="minimumSize">
        <size>
         <width>75</width>
         <height>10</height>
        </size>
       </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="SharedIsaTreeView" name="isa_tree_view_">
     <property name="uniformRowHeights">
      <bool>true</bool>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ScaledLabel</class>
   <extends>QLabel</extends>
   <header>qt_common/custom_widgets/scaled_label.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ArrowIconComboBox</class>
   <extends>QPushButton</extends>
   <header>qt_common/custom_widgets/arrow_icon_combo_box.h</header>
  </customwidget>
  <customwidget>
   <class>TextSearchWidget</class>
   <extends>QLineEdit</extends>
   <header>qt_common/custom_widgets/text_search_widget.h</header>
  </customwidget>
  <customwidget>
   <class>ScaledCheckBox</class>
   <extends>QCheckBox</extends>
   <header>qt_common/custom_widgets/scaled_check_box.h</header>
  </customwidget>
  <customwidget>
   <class>SharedIsaTreeView</class>
   <extends>QTreeView</extends>
   <header>qt_common/custom_widgets/shared_isa_tree_view.h</header>
  </customwidget>
  <customwidget>
   <class>SharedIsaBranchLabelNavigationWidget</class>
   <extends>QWidget</extends>
   <header>qt_common/custom_widgets/shared_isa_branch_label_navigation_widget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ScaledLineEdit</class>
   <extends>QLineEdit</extends>
   <header>qt_common/custom_widgets/scaled_line_edit.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../../frontend/resources.qrc"/>
 </resources>
 <connections/>
</ui>
